--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
-body{
+*{
     margin:0px;
+    padding:0px;
+}
+
+
+body{
     color:white;
     background: black;
     font-family: "Chakra Petch", sans-serif;
@@ -7,31 +12,29 @@ body{
 
 header{
     text-align: center;
-    padding:50px;
+    padding:20px;
     font-size:32px;
  
 }
 
 h1{
-    margin:0px;
-    padding-top:50px;
-    padding-left: 20px;
-    font-size:25px;
+    font-size:40px;
 }
 
+p{
+    font-size:20px;
+    padding-top:20px;
+    padding-left:20px;
+}
 
 
 section{
     background:#78909c;
-    margin-left:20px;
-    margin-right: 20px;
-    justify-content: left;
-    display:flex;
-
+ 
 }
 
 .categoria-videos{
-    padding:50px;
+    padding:20px;
     display:flex;
     overflow-x: auto;
     gap:10px;
@@ -39,7 +42,7 @@ section{
 }
 
 img{
-    height: 180px;
+    height: 250px;
 }
 
 .categoria-videos img {
@@ -48,4 +51,8 @@ img{
 .categoria-videos img:hover{
     opacity:1.0;
     border: solid 2px black;
+}
+
+.segunda-section{
+    margin-top:50px;
 }
