--- a/style.css
+++ b/style.css
@@ -8,49 +8,60 @@ body{
     color:white;
     background: black;
     font-family: "Chakra Petch", sans-serif;
+    margin-bottom: 80px;
 }
 
-header{
+.cabeçalho{
     text-align: center;
     padding:20px;
     font-size:32px;
  
 }
 
-h1{
+.cabeçalho h1{
     font-size:40px;
 }
 
-p{
-    font-size:20px;
+.abertura{
+    display:flex;
     padding-top:20px;
-    padding-left:20px;
+    padding-bottom: 20px;
+    justify-content: left;
 }
 
+.abertura h2{
+    padding: 80px;
+}
 
 section{
     background:#78909c;
- 
+}
+
+p{
+    padding:20px;
+    font-size:20px;
 }
 
 .categoria-videos{
-    padding:20px;
+    padding-left: 20px;
+    padding-right: 20px;
     display:flex;
     overflow-x: auto;
     gap:10px;
     
 }
 
-img{
-    height: 250px;
-}
 
 .categoria-videos img {
-    opacity:0.3;
+    opacity:0.5;
+    height: 250px;
 }
 .categoria-videos img:hover{
     opacity:1.0;
     border: solid 2px black;
+}
+.primeira-section{
+    margin-top:50px;
 }
 
 .segunda-section{
