--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 
 
 body{
-    color:white;
-    background: black;
+    color:black;
+    background: white;
     font-family: "Chakra Petch", sans-serif;
     margin-bottom: 80px;
 }
@@ -34,12 +34,16 @@ body{
 }
 
 section{
-    background:#78909c;
+    background:rgb(190, 185, 185);
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 p{
     padding:20px;
     font-size:20px;
+    color:black;
+    font-weight: 800;
 }
 
 .categoria-videos{
@@ -65,5 +69,9 @@ p{
 }
 
 .segunda-section{
+    margin-top:50px;
+}
+
+.terceira-section{
     margin-top:50px;
 }
